...
  ~
  -->

<resources>
    <string name="settings">Settings</string>
    <string name="import_database">Import Database</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="changelog">Changelog</string>
    <string name="about">About</string>

    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
...
